Ensure the 'update settings' button in bbpress settings is aligned #71

--- a/stylesheets/admin.css
+++ b/stylesheets/admin.css
@@ -176,5 +176,5 @@ p.memberful-access-label {
 }
 .memberful-bbpress-submit-buttons {
 	clear: both;
-	margin: 30px 0;
+	margin: 30px 20px;
 }
